# integrations

./: .gitignore  README.md  package.json
.github/: dependabot.yml
examples/integrations/agentkit/browserbase/: package-lock.json  package.json
examples/integrations/agentkit/browserbase/src/: index.ts
examples/integrations/agentkit/stagehand/: package-lock.json  package.json
examples/integrations/braintrust/: package-lock.json
examples/integrations/browser-use/: .env.example  main.py  requirements.txt
examples/integrations/crewai/crewai-tutorial/: pyproject.toml
examples/integrations/crewai/stagehand/: .env.example  main.py  requirements.txt
examples/integrations/langchain/stagehand/: package-lock.json  package.json
examples/integrations/mastra/: package-lock.json  package.json
examples/integrations/mongodb/: package-lock.json  package.json
examples/integrations/stripe/node/: README.md  package.json
examples/integrations/stripe/python/: README.md
examples/integrations/temporal/: README.md  package-lock.json  package.json
examples/integrations/temporal/src/: research-activities.ts  research-worker.ts  workflows.ts
examples/integrations/trigger/: .env.example  README.md  package-lock.json  package.json  trigger.config.ts
examples/integrations/trigger/src/app/: layout.tsx  page.tsx
examples/integrations/trigger/src/trigger/: pdf-to-image.tsx  puppeteer-log-page-title.tsx  puppeteer-webpage-to-pdf.tsx  (+5 more)
examples/integrations/vercel/BrowseGPT/: package-lock.json
examples/integrations/vercel/vercel-puppeteer/: package-lock.json  package.json
(+3 files in other folders)
