[tool.poetry]
name = "tutorial-crewai"
version = "0.1.0"
description = "Build a Crew that finds the best roundtrip flights on the given dates."
package-mode = false
authors = ["Anirudh Kamath <anirudh@browserbase.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = {extras = ["tools"], version = "^0.60.0"}
html2text = "^2024.2.26"
playwright = "^1.47.0"
python-dotenv = "^1.0.1"
litellm = ">=1.61.15,<2.0.0"
aiohttp = ">=3.10.11,<4.0.0"
cryptography = ">=44.0.1,<45.0.0"
jinja2 = ">=3.1.6,<4.0.0"
protobuf = ">=4.25.8,<5.0.0"
requests = ">=2.32.4,<3.0.0"
starlette = ">=0.40.0,<1.0.0"
urllib3 = ">=2.5.0,<3.0.0"
langchain-core = ">=0.2.43,<0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pylint = "^3.2.7"
setuptools = ">=78.1.1,<81.0.0"
virtualenv = ">=20.26.6,<21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
